style.css
/* Сброс css */
ul {
    padding: 0;
}

/* Убираем внешние отступы */
body,
h1,
h2,
h3,
h4,
p,
ul,
ol[class],
li,
figure,
figcaption,
blockquote,
dl,
dd {
    margin: 0;
}

/* Наследуем шрифты для инпутов и кнопок */
input,
button,
textarea,
select {
    font: inherit;
}

ul,
ol[class] {
    list-style: none;
}

a {
    text-decoration: none;
}

a:active,
a:focus,
input:active,
input:focus,
textarea:active,
textarea:focus {
    outline: none;
}

body {
    font-family: 'Lato', sans-serif;
    margin: 0;
}

html {
    scroll-behavior: smooth;
}

.wrapper {
    width: 1020px;
    margin: 0 auto;
}

.header {

}

.header__burger-menu {
    display: none;
}

.header-wrapper {


    position: fixed;
    top: 0;
    z-index: 105;
    width: 1020px;
    height: 89px;
    background-color: #2d303a;
    border-bottom: 6px solid #323746;
}

.header-wrap {
    padding: 0 40px;
    display: flex;
    justify-content: space-between;
    text-transform: uppercase;
}

.header__logo {
    margin-top: 28px;
}

.logo {
    font-size: 26px;
    color: #ffffff;
    font-weight: 700;
    letter-spacing: -1.3px;
}

.header__logo span,
.header__menu-logo span{
    color: #f06c64;
}

.navigation {

}

.header__navigation {
    margin-top: 42px;

}

.navigation ul {
    display: flex;
}

.navigation li {
    list-style: none;
    margin-left: 13px;
}

.navigation__item {
    text-decoration: none;
    display: block;
    font-size: 12px;
    color: #ffffff;
    font-weight: 700;
    text-align: right;
    cursor: pointer;
    transition: all 0.2s ease-out;
}

.navigation__item:hover{
    cursor: pointer;
}

.navigation__item_active {
    color: #f06c64;
    transition: color 0.2s linear;
}

.navigation__dot {
    font-size: 12px;
    font-weight: 700;
    color: #494e62;
    cursor: default;
}

main {
    margin-top: 68px;
}

.slider {
    position: relative;
    transition: 0.5s;
}

.slider__Picture-wrapper {
    overflow: hidden;
    background-color: #f06c64;
    border-bottom: 6px solid #ea676b;
    transition: all .4s;
    height: 594px;
}

.second-picture {
    background-color: #648BF0;
    border-bottom: 6px solid #5c6ecb;
}

.picture-1 {
    position: relative;
    transition: transform .2s;
    z-index: 100;
}

.picture-2 {
    position: relative;
    transition: transform .2s;
}

.slider_left-offset {
    transform: translate(-90%);
    /*transition: transform .2s;*/
}

.slider_right-offset {
    transform: translate(90%);
    /*transition: transform .2s;*/
}

.hidden_opacity {
    opacity: 0;
}

.visually-hidden {
    position: absolute;
    clip: rect(0 0 0 0);
    width: 1px;
    height: 1px;
    margin: -1px;
}

/*Arrow*/
.arrow {
    border: solid rgba(0, 0, 0, 0.2);
    border-width: 0 5px 5px 0;
    display: inline-block;
    padding: 8px;
    border-radius: 14%;
    cursor: pointer;
    transition: all 0.2s ease-out;
    z-index: 101;
}

.arrow:hover {
    border-color: rgba(0, 0, 0, 0.45);
    transition: all 0.2s ease-out;
}

.slider__arrow_left {
    position: absolute;
    top: 284px;
    left: 45px;
    transform: rotate(135deg);
}

.slider__arrow_right {
    transform: rotate(-45deg);
    position: absolute;
    top: 284px;
    right: 43px;
}

/*pictures*/


#iphone-vertical-shadow {
    position: absolute;
    left: 112px;
    top: 53px;
}

#iphone-vertical-body {
    position: absolute;
    left: -9px;
    top: 175px;
    transform: rotate(-90deg);
}

#iphone-vertical-screen {
    position: absolute;
    left: 123px;
    top: 115px;
    transition: all .25s;
}


#iphone2-vertical-body {
    position: absolute;
    height: 513px;
    left: 383px;
    top: 43px;
}

#iphone2-vertical-mini1 {
    position: absolute;
    /*width: 156.02px;*/
    /*height: 314px;*/
    left: 252px;
    top: 152px;
    opacity: 0.5;
}

#iphone2-vertical-mini2 {
    position: absolute;
    /*width: 156.02px;*/
    /*height: 314px;*/
    left: 612.16px;
    top: 152px;
    opacity: 0.5;
}

#iphone-horizontal-shadow {
    position: absolute;
    left: 547px;
    top: 53px;
    transform: rotateY(180deg) rotateZ(-90deg);
}

#iphone-horizontal-body {
    position: absolute;
    left: 425px;
    top: 174px;
}

#iphone-horizontal-screen {
    position: absolute;
    left: 482px;
    top: 185px;
    transition: all .25s;
}

.screen_off {
    opacity: 0;
    transition: all .25s;
}

/*services*/
.services {
    background-color: #f2f2f2;
    height: 494px;
    border-bottom: 6px solid #ffffff;
    padding: 0 40px;
}

.services__title {
    margin: 0;
    padding-top: 59px;
    display: block;
    font-size: 30px;
    color: #666d89;
    font-weight: 900;
}

.services__text {
    width: 940px;
    height: 57px;
    font-size: 18px;
    line-height: 30px;
    margin-top: 18px;
    color: #767e9e;
    font-weight: 300;
    letter-spacing: -0.05px;
    overflow: hidden;
    text-align: justify;
}

.services__items-section {
    width: 940px;
    height: 232px;
    margin: 48px auto 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.item-service {
    display: flex;
    width: 300px;
    height: 87px;
    overflow: hidden;
    text-overflow: clip;
}

.services__item {
    margin-bottom: 36px;
}

.item-service__icon {
    margin-top: 2px;
    margin-right: 1px;
    width: 55px;
    height: 55px;
    border-radius: 50%;
    border: 2px solid #666d89;
    display: flex;
}

.item-service__icon img {
    margin: auto;
}

.item-service__text-container {
    padding-left: 20px;
    width: 220px;
    height: 100px;
    line-height: 18px;
}

.item-service h3 {
    font-size: 18px;
    line-height: 18px;
    color: #666d89;
    font-weight: 900;
    margin: 0;
}

.item-service p {
    font-size: 12px;
    line-height: 21px;
    color: #767e9e;
    font-weight: 400;
    margin: 10px 0 0 0;
    text-align: justify;
}


.portfolio {
    height: 863px;
    background-color: rgb(45, 48, 58);
    border-bottom: solid 6px rgb(50, 55, 70);
}

.block-content {
    width: 940px;
    margin: 0 auto;
}
/* ... */

